# daemonpp

./: CMakeLists.txt  LICENSE  README.md  daemon.hpp  daemonpp.conf  daemonpp.cpp  daemonpp.service  dlog.hpp  main.cpp
examples/helloworldd/: CMakeLists.txt  README.md  helloworldd.conf  helloworldd.cpp  helloworldd.service
examples/helloworldd/systemd/: daemonpp.conf.in
examples/httpreqd/: CMakeLists.txt  README.md  httpreqd.conf  httpreqd.cpp  httpreqd.service
examples/httpreqd/include/: dconfig.hpp
examples/httpreqd/systemd/: README.md  daemonpp.service.in
examples/immortal_hello_world/: CMakeLists.txt  README.md  immortal_hello_world.conf  immortal_hello_world.cpp  immortal_hello_world.service
examples/temperatured/: CMakeLists.txt  README.md  temperatured.conf  temperatured.cpp  temperatured.service
examples/temperatured/systemd/: README.md
include/: daemon.hpp  dconfig.hpp  dlog.hpp
systemd/: README.md  daemonpp.service.in
